--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <div class="hero-image">
             <div class="image-wrapper">
               <img
-                src="https://raw.githubusercontent.com/IshtiAK47/IshtiAK47/refs/heads/main/images/p1.jpg"
+                src="https://raw.githubusercontent.com/IshtiAK47/IshtiAK47/refs/heads/main/components/1769852222694%7E3.png"
                 alt="Ishtiak Mahmood"
               />
               <div class="image-overlay"></div>
